--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/christianjaena/Retail-DataVis#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "cors": "^2.8.5"
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
